2006-01-30  Michael Olson  <mwolson@gnu.org>

	* erc-stamp.el (erc-timestamp-right-align-by-pixel): New option
	that determines whether to use pixel values to align right
	timestamps.  The default is not to do so, since it only works with
	Emacs22 on X, and even then some people have trouble.
	(erc-insert-aligned): Use `erc-timestamp-right-align-by-pixel'.

2006-01-29  Michael Olson  <mwolson@gnu.org>

	* ChangeLog, ChangeLog.2005, ChangeLog.2004, ChangeLog.2003,
	ChangeLog.2002, ChangeLog.2001: Add "See ChangeLog.NNNN" line for
	earlier changes.  Use utf-8 encoding.  Fix some accent typos.

	* erc-speedbar.el (erc-speedbar-buttons): Fix reference to free
	variable.
	(erc-speedbar-goto-buffer): Fix compiler warning.

	* erc-ibuffer.el: Use `define-ibuffer-filter' instead of
	`ibuffer-degine-limiter'.  Use `define-ibuffer-column' instead of
	`ibuffer-define-column'.  Require 'ibuf-ext so that the macros
	work without compiler warnings.

	* man/erc.texi (Obtaining ERC, Installation): Note that these
	sections may be skipped if using the version of ERC that comes
	with Emacs.

2006-01-29  Edward O'Connor  <ted@oconnor.cx>

	* erc-viper.el: Remove. Now that ERC is included in Emacs, these
	work-arounds live in Viper itself.

2006-01-28  Michael Olson  <mwolson@gnu.org>

	* erc-*.el, erc.texi, NEWS: Add Arch taglines as per Emacs
	guidelines.

	* erc-*.el: Space out copyright years like the rest of Emacs.  Use
	the Emacs copyright statement.  Refer to ourselves as ERC rather
	than "Emacs IRC Client", since there are now several IRC clients
	for Emacs.

	* erc-compat.el (erc-emacs-build-time): Define as a variable.

	* erc-log.el (erc-log-setup-logging): Use write-file-functions.

	* erc-ibuffer.el: Require 'erc.

	* erc-stamp.el (erc-insert-aligned): Only use the special text
	property when window-system is X.

	* erc.texi: Adapt for inclusion in Emacs.

2006-01-28  Johan Bockgård  <bojohan@users.sourceforge.net>
